# near-contract

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  Makefile  README.md  install.sh
src/: cmn.rs  lib.rs
src/cmn/: ft.rs  mod.rs  nft.rs  test_utils.rs  utils.rs
