[package]
name = "contract"
version = "0.1.0"
authors = ["Doha Lee <just.do.halee@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
near-contract-standards = { version = "4.1.1", optional = true }
uint = { version = "0.9.5", optional = true }

[features]
default = ["hex", "ft", "nft"]
standards = ["near-contract-standards"]
ft = ["standards"]
nft = ["standards"]
hex = ["uint"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
